--- a/.memos/手順書.md
+++ b/.memos/手順書.md
@@ -21,10 +21,13 @@ pnpm tsc --init
 
 ```bash
 # 主要な依存関係
-pnpm add ai @ai-sdk/react @ai-sdk/openai zod
+pnpm add ai zod
 
 # 開発用の依存関係
-pnpm add -D @types/react @types/react-dom tsup
+pnpm add -D typescript @types/node @types/react @types/react-dom tsup vitest
+
+# オプショナル依存関係（peerDependencies）
+pnpm add -D @ai-sdk/react @ai-sdk/openai
 ```
 
 ## 2. プロジェクト構造
@@ -35,7 +38,8 @@ ai-agent-kit/
 │   ├── core/
 │   │   ├── types.ts          # 型定義
 │   │   ├── constants.ts      # 定数
-│   │   └── errors.ts         # エラー定義
+│   │   ├── errors.ts         # エラー定義
+│   │   └── models.ts         # モデルラッパー
 │   ├── agents/
 │   │   ├── base.ts          # 基本エージェントクラス
 │   │   ├── workflow.ts      # ワークフローエージェント
@@ -43,11 +47,22 @@ ai-agent-kit/
 │   ├── tools/
 │   │   ├── base.ts          # 基本ツールクラス
 │   │   └── common/          # 共通ツール
+│   ├── memory/
+│   │   ├── base.ts          # 基本メモリクラス
+│   │   ├── short-term.ts    # 短期メモリ
+│   │   └── long-term.ts     # 長期メモリ
 │   ├── hooks/
 │   │   ├── useAgent.ts      # エージェントフック
+│   │   ├── useMemory.ts     # メモリフック
 │   │   └── useTools.ts      # ツールフック
+│   ├── integrations/
+│   │   ├── nextjs-app/      # Next.js App Router向け
+│   │   └── nextjs-pages/    # Next.js Pages Router向け
 │   └── index.ts             # メインエントリーポイント
-├── examples/                 # 使用例
+├── examples/
+│   ├── next-app/            # Next.js App Router例
+│   ├── next-pages/          # Next.js Pages Router例
+│   └── cli/                 # CLI/スクリプト例
 ├── tests/                   # テストファイル
 ├── package.json
 └── tsconfig.json
@@ -55,53 +70,380 @@ ai-agent-kit/
 
 ## 3. 主要コンポーネントの実装
 
-### 3.1 基本エージェントクラス
+### 3.1 基本的なモデルラッパー
+
+```typescript
+// src/core/models.ts
+import { AIModel, ModelType } from "./types";
+
+export function createModel(type: ModelType, config?: any): AIModel {
+  // モデルの種類に基づいて適切なプロバイダを返す
+  switch (type) {
+    case "openai":
+      return {
+        type,
+        provider: "openai",
+        config,
+      };
+    case "anthropic":
+      return {
+        type,
+        provider: "anthropic",
+        config,
+      };
+    // 他のモデルプロバイダを追加
+    default:
+      throw new Error(`Unsupported model type: ${type}`);
+  }
+}
+
+// 簡単にモデルを切り替えるためのヘルパー関数
+export const openai = (model: string, config?: any) =>
+  createModel("openai", { model, ...config });
+export const anthropic = (model: string, config?: any) =>
+  createModel("anthropic", { model, ...config });
+```
+
+### 3.2 基本エージェントクラス（generateText 中心）
 
 ```typescript
 // src/agents/base.ts
-import { StreamingTextResponse } from "ai";
+import { generateText } from "ai";
+import { AIModel, AgentConfig, Tool } from "../core/types";
 
 export abstract class BaseAgent {
-  protected model: any;
-  protected tools: any[];
+  protected model: AIModel;
+  protected tools: Tool[];
+  protected memory: any;
 
   constructor(config: AgentConfig) {
     this.model = config.model;
     this.tools = config.tools || [];
+    this.memory = config.memory;
   }
 
-  abstract execute(input: string): Promise<StreamingTextResponse>;
+  // generateTextを使用してテキスト生成
+  protected async generateResponse(prompt: string, options?: any) {
+    return generateText({
+      model: this.model,
+      prompt,
+      tools: this.tools.reduce((acc, tool) => {
+        acc[tool.name] = tool.definition;
+        return acc;
+      }, {}),
+      ...options,
+    });
+  }
+
+  // 外部から呼び出すメソッド
+  abstract execute(input: string, context?: any): Promise<any>;
+
+  // APIエンドポイントを取得（Next.js統合用）
+  abstract getEndpoint(): string;
 }
 ```
 
-### 3.2 React フック
+### 3.3 ワークフローエージェント
+
+```typescript
+// src/agents/workflow.ts
+import { BaseAgent } from "./base";
+import { WorkflowConfig, WorkflowStep } from "../core/types";
+
+export class WorkflowAgent extends BaseAgent {
+  private steps: WorkflowStep[];
+
+  constructor(config: WorkflowConfig) {
+    super(config);
+    this.steps = config.steps || [];
+  }
+
+  async execute(input: string, context?: any) {
+    let result = input;
+    let currentContext = context || {};
+
+    // 設定された各ステップを順番に実行
+    for (const step of this.steps) {
+      const stepResult = await this.generateResponse(
+        step.getPrompt(result, currentContext),
+        step.options
+      );
+
+      result = stepResult.text;
+      currentContext = {
+        ...currentContext,
+        [step.id]: result,
+      };
+
+      // ゲート条件があれば評価
+      if (step.gate && !(await step.gate(result, currentContext))) {
+        break;
+      }
+    }
+
+    return result;
+  }
+
+  getEndpoint() {
+    return "/api/agent/workflow";
+  }
+}
+```
+
+### 3.4 自律エージェント
+
+```typescript
+// src/agents/autonomous.ts
+import { BaseAgent } from "./base";
+import { AutonomousConfig } from "../core/types";
+
+export class AutonomousAgent extends BaseAgent {
+  private systemPrompt: string;
+  private maxIterations: number;
+
+  constructor(config: AutonomousConfig) {
+    super(config);
+    this.systemPrompt = config.systemPrompt || "";
+    this.maxIterations = config.maxIterations || 5;
+  }
+
+  async execute(input: string, context?: any) {
+    // コンテキストの初期化
+    let currentContext = context || {};
+    let iterations = 0;
+    let lastResult = "";
+
+    while (iterations < this.maxIterations) {
+      // メモリから過去の対話を取得
+      const history = this.memory ? await this.memory.getHistory() : [];
+
+      // エージェントの思考と計画
+      const planResult = await this.generateResponse(
+        `${
+          this.systemPrompt
+        }\n\nCurrent task: ${input}\n\nCurrent context: ${JSON.stringify(
+          currentContext
+        )}\n\nPrevious interactions: ${JSON.stringify(
+          history
+        )}\n\nPlease plan your next actions.`,
+        { temperature: 0.7 }
+      );
+
+      // 次のアクションを実行
+      const actionResult = await this.generateResponse(
+        `${planResult.text}\n\nBased on this plan, execute the next action and provide your response.`,
+        { tools: this.tools }
+      );
+
+      // 結果を記録
+      lastResult = actionResult.text;
+
+      // ツール呼び出しがあれば処理
+      if (
+        actionResult.toolInvocations &&
+        actionResult.toolInvocations.length > 0
+      ) {
+        currentContext = {
+          ...currentContext,
+          toolResults: actionResult.toolInvocations,
+        };
+      } else {
+        // ツール呼び出しがなければ終了
+        break;
+      }
+
+      iterations++;
+    }
+
+    // メモリに記録
+    if (this.memory) {
+      await this.memory.saveInteraction(input, lastResult);
+    }
+
+    return lastResult;
+  }
+
+  getEndpoint() {
+    return "/api/agent/autonomous";
+  }
+}
+```
+
+### 3.5 React フック
 
 ```typescript
 // src/hooks/useAgent.ts
-import { useChat } from "@ai-sdk/react";
+import { useState, useCallback } from "react";
 import type { BaseAgent } from "../agents/base";
 
-export function useAgent(agent: BaseAgent, config?: AgentConfig) {
-  const chat = useChat({
-    api: agent.getEndpoint(),
-    ...config,
-  });
+export function useAgent(agent: BaseAgent, config?: any) {
+  const [messages, setMessages] = useState([]);
+  const [isLoading, setIsLoading] = useState(false);
+  const [error, setError] = useState(null);
+
+  const sendMessage = useCallback(
+    async (message) => {
+      setIsLoading(true);
+      setError(null);
+
+      try {
+        // 新しいメッセージを追加
+        const userMessage = { role: "user", content: message };
+        setMessages((prev) => [...prev, userMessage]);
+
+        // エージェントからの応答を取得
+        const response = await agent.execute(message, {
+          messages: [...messages, userMessage],
+        });
+
+        // 応答を追加
+        const assistantMessage = { role: "assistant", content: response };
+        setMessages((prev) => [...prev, assistantMessage]);
+
+        return assistantMessage;
+      } catch (err) {
+        setError(err);
+        return null;
+      } finally {
+        setIsLoading(false);
+      }
+    },
+    [agent, messages]
+  );
+
+  // Reactの状態をクリア
+  const reset = useCallback(() => {
+    setMessages([]);
+    setError(null);
+  }, []);
 
   return {
-    ...chat,
-    agent,
+    messages,
+    isLoading,
+    error,
+    sendMessage,
+    reset,
   };
 }
 ```
 
-## 4. パッケージ設定
+## 4. Next.js 統合
 
-### 4.1 package.json の設定
+### 4.1 App Router の例（Route Handler）
+
+```typescript
+// src/integrations/nextjs-app/route-handler.ts
+import { NextRequest, NextResponse } from "next/server";
+import { openai } from "@ai-sdk/openai";
+import { generateText } from "ai";
+import { WorkflowAgent } from "../../agents/workflow";
+
+// ワークフローエージェントの設定
+const workflowAgent = new WorkflowAgent({
+  model: openai("gpt-4o"),
+  steps: [
+    // ステップ定義
+  ],
+  tools: [
+    // ツール定義
+  ],
+});
+
+// Route Handlerの定義（Next.js 13.2+）
+export async function POST(req: NextRequest) {
+  try {
+    const { messages } = await req.json();
+    const prompt = messages[messages.length - 1].content;
+
+    // エージェントを実行
+    const result = await workflowAgent.execute(prompt, { messages });
+
+    // JSONレスポンス
+    return NextResponse.json({ result });
+  } catch (error) {
+    return NextResponse.json({ error: error.message }, { status: 500 });
+  }
+}
+```
+
+### 4.2 Pages Router の例（API Route）
+
+```typescript
+// src/integrations/nextjs-pages/api-route.ts
+import type { NextApiRequest, NextApiResponse } from "next";
+import { openai } from "@ai-sdk/openai";
+import { AutonomousAgent } from "../../agents/autonomous";
+
+// 自律エージェントの設定
+const autonomousAgent = new AutonomousAgent({
+  model: openai("gpt-4o"),
+  systemPrompt: "...",
+  tools: [
+    // ツール定義
+  ],
+});
+
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
+  if (req.method !== "POST") {
+    return res.status(405).json({ error: "Method not allowed" });
+  }
+
+  try {
+    const { messages } = req.body;
+    const prompt = messages[messages.length - 1].content;
+
+    // エージェントを実行
+    const result = await autonomousAgent.execute(prompt, { messages });
+
+    // JSONレスポンス
+    return res.status(200).json({ result });
+  } catch (error) {
+    return res.status(500).json({ error: error.message });
+  }
+}
+```
+
+### 4.3 Server Components との統合例
+
+```typescript
+// src/integrations/nextjs-app/server-component.tsx
+import { openai } from "@ai-sdk/openai";
+import { WorkflowAgent } from "../../agents/workflow";
+
+// パラメータを受け取るサーバーコンポーネント
+export default async function AgentComponent({ query }: { query: string }) {
+  // サーバーコンポーネント内でエージェントを初期化
+  const agent = new WorkflowAgent({
+    model: openai("gpt-4o"),
+    steps: [
+      // ステップ定義
+    ],
+  });
+
+  // サーバーサイドでエージェントを実行
+  const result = await agent.execute(query);
+
+  return (
+    <div>
+      <h2>エージェント応答</h2>
+      <div className="response">{result}</div>
+    </div>
+  );
+}
+```
+
+## 5. パッケージ設定
+
+### 5.1 package.json の設定
 
 ```json
 {
   "name": "ai-agent-kit",
   "version": "0.1.0",
+  "description": "Next.js向けAIエージェントフレームワーク",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -109,56 +451,118 @@ export function useAgent(agent: BaseAgent, config?: AgentConfig) {
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "jest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "lint": "eslint src/**/*.ts",
+    "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
+    "ai": "^4.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
-    "ai": "^4.0.0",
-    "@ai-sdk/react": "^4.0.0"
-  }
+    "@ai-sdk/react": "^4.0.0",
+    "@ai-sdk/openai": "^4.0.0",
+    "next": ">=13.0.0"
+  },
+  "dependencies": {
+    "zod": "^3.22.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "tsup": "^7.0.0",
+    "vitest": "^0.34.0",
+    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0"
+  },
+  "keywords": ["ai", "agent", "nextjs", "openai", "llm"]
 }
 ```
 
-### 4.2 tsup.config.ts の設定
+### 5.2 tsup.config.ts の設定
 
 ```typescript
 import { defineConfig } from "tsup";
 
 export default defineConfig({
-  entry: ["src/index.ts"],
+  entry: [
+    "src/index.ts",
+    "src/integrations/nextjs-app/index.ts",
+    "src/integrations/nextjs-pages/index.ts",
+  ],
   format: ["cjs", "esm"],
   dts: true,
   splitting: false,
   sourcemap: true,
   clean: true,
+  treeshake: true,
+  external: [
+    "react",
+    "react-dom",
+    "next",
+    "ai",
+    "@ai-sdk/react",
+    "@ai-sdk/openai",
+  ],
 });
 ```
 
-## 5. 使用例の作成
-
-### 5.1 基本的な使用例
+## 6. CLI/スクリプト的な使用例
 
 ```typescript
-// examples/simple-chat.tsx
-import { useAgent } from "ai-agent-kit";
-import { WorkflowAgent } from "ai-agent-kit/agents";
+// examples/cli/simple-agent.ts
+import { openai } from "@ai-sdk/openai";
+import { AutonomousAgent } from "../../src/agents/autonomous";
+import { MemoryManager } from "../../src/memory/base";
 
-export default function SimpleChat() {
-  const agent = new WorkflowAgent({
-    model: "gpt-4",
-    tools: [
-      /* ツール設定 */
-    ],
-  });
-
-  const { messages, input, handleInputChange, handleSubmit } = useAgent(agent);
-
-  return <div>{/* チャットUI実装 */}</div>;
+// 環境変数から設定を読み込み
+const OPENAI_API_KEY = process.env.OPENAI_API_KEY;
+if (!OPENAI_API_KEY) {
+  console.error("OPENAI_API_KEY environment variable is required");
+  process.exit(1);
 }
+
+// メモリマネージャ（JSONファイルベース）の実装
+const fileMemory = new MemoryManager({
+  filePath: "./agent-memory.json",
+});
+
+// エージェントの初期化
+const agent = new AutonomousAgent({
+  model: openai("gpt-4o", { apiKey: OPENAI_API_KEY }),
+  systemPrompt: "You are a helpful assistant.",
+  memory: fileMemory,
+  maxIterations: 3,
+});
+
+// コマンドライン引数から入力を取得
+const input = process.argv.slice(2).join(" ");
+if (!input) {
+  console.error("Please provide an input");
+  process.exit(1);
+}
+
+// エージェントを実行
+async function run() {
+  console.log(`Input: ${input}`);
+  console.log("Processing...");
+
+  try {
+    const result = await agent.execute(input);
+    console.log("\nResult:");
+    console.log(result);
+  } catch (error) {
+    console.error("Error:", error.message);
+  }
+}
+
+run();
 ```
 
-## 6. パッケージの公開手順
+## 7. パッケージの公開手順
 
 1. パッケージのビルド
 
@@ -182,44 +586,134 @@ npm login
 npm publish --access public
 ```
 
-## 7. 今後の開発計画
+## 8. 自動化されたリリースワークフロー
+
+### 8.1 Changesets 導入
+
+```bash
+# changetsetsのインストール
+pnpm add -D @changesets/cli
+
+# 初期化
+pnpm changeset init
+```
+
+### 8.2 リリースワークフロー
+
+```bash
+# 変更内容の記録
+pnpm changeset
+
+# バージョン更新
+pnpm changeset version
+
+# リリースビルドとパブリッシュ
+pnpm changeset publish
+```
+
+### 8.3 GitHub Actions による自動化（.github/workflows/release.yml）
+
+```yaml
+name: Release
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build
+        run: pnpm build
+
+      - name: Test
+        run: pnpm test
+
+      - name: Create Release Pull Request or Publish
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: pnpm changeset publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+```
+
+## 9. 今後の開発計画
 
 ### Phase 1 (v0.1.0)
 
 - [x] 基本的なエージェントフレームワークの実装
-- [x] Vercel AI SDK との統合
+- [x] モデル切り替え機能
+- [x] generateText 中心の API
 - [x] 基本的なツール実装
+- [x] Next.js 統合サンプル
 
 ### Phase 2 (v0.2.0)
 
-- [ ] より多くのツールの追加
 - [ ] メモリシステムの実装
+- [ ] より多くのツールの追加
+- [ ] Server Components 対応強化
 - [ ] エラーハンドリングの強化
 
 ### Phase 3 (v1.0.0)
 
 - [ ] パフォーマンス最適化
+- [ ] UI/UX コンポーネント
 - [ ] 完全なドキュメント整備
 - [ ] テストカバレッジの向上
 
-## 8. 注意点
+## 10. 注意点と考慮事項
 
 1. **シンプルさの維持**
 
    - 必要最小限の機能から始める
    - 段階的に機能を追加
+   - フレームワークに依存しないコア機能
 
-2. **TypeScript 対応**
+2. **モデル切り替えの柔軟性**
+
+   - プロバイダに依存しないインターフェース
+   - 設定の分離と抽象化
+   - 必要に応じたアダプターパターンの採用
+
+3. **TypeScript 対応**
 
    - 型定義の充実
    - 開発者体験の向上
+   - モデルの型安全性の確保
 
-3. **エラーハンドリング**
+4. **エラーハンドリング**
 
    - わかりやすいエラーメッセージ
    - リカバリー方法の提示
+   - エッジケースの対応
 
-4. **ドキュメント**
+5. **パフォーマンス考慮事項**
+
+   - generateText の適切な使用
+   - 不必要なネットワークリクエストの最小化
+   - Server Components の活用
+
+6. **ドキュメント**
    - 基本的な使用方法
    - 具体的な実装例
    - トラブルシューティングガイド
+   - モデル切り替えの例
